--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
 body {
+  background-color: rgb(228, 228, 189);
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
+    font-family: fantasy;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +12,73 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.btn {
+  display: block;
+  background: rgb(228, 228, 189);
+  color: black;
+  border: none;
+  padding: 10px 20px;
+  margin: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: inherit;
+}
+
+.card {
+  text-align: center;
+  margin: 1rem;
+  box-shadow: 0 0 7px 0 rgb(151, 145, 145);
+  border-radius: 5px;
+  border: 1px solid rgb(170, 168, 168);
+  width: 300px;
+  font-family: fantasy;
+  background-color: salmon;
+}
+
+.comment-body {
+  padding: 0 20px;
+  padding-left: 28px;
+}
+
+.comment {
+  position: relative;
+  margin: 20px ;
+}
+
+.div-feed{
+  flex-direction: column-reverse;
+  border: 1px solid grey;
+  border-radius: 15px;
+  padding: 30px;
+  background-color: whitesmoke;
+  justify-content: flex-end;
+  display: flex;
+  width: 200px;
+  height: 100px
+}
+
+nav{
+  background-color: #e75b5b;
+  height: 50px;
+  border: 1px solid #dfdfdf
+}
+
+.div-header{
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.home{
+  text-align: center;
+  padding-top: 100px;
+  font-size: larger;
 }
